Fixed text alignment

--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,7 @@ MEDIA QUERIES
 
     .perfume-name {
         padding: 1.25rem 0 1.5rem 0;
+        max-width: 14.50rem;
     }
 
 }
